--- a/public/menu.css
+++ b/public/menu.css
@@ -1277,9 +1277,9 @@
     display: flex;
     flex-direction: column; /* Вертикальная структура для flex-grow */
 
-    background-color: rgba(28, 28, 30, 0.95);
-    backdrop-filter: blur(20px);
-    -webkit-backdrop-filter: blur(20px);
+    background-color: rgba(28, 28, 30, 0.65);
+    backdrop-filter: blur(30px) saturate(150%);
+    -webkit-backdrop-filter: blur(30px) saturate(150%);
     
     border: 1px solid rgba(255, 255, 255, 0.15);
     border-bottom: none; /* Убираем границу снизу, так как прижато к краю */
